[gd_scene load_steps=19 format=3 uid="uid://m4ten4fh0yxv"]

[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_p7aow"]
[ext_resource type="Script" uid="uid://2o6j45og8haj" path="res://scene/battle/battle.gd" id="1_rcqy1"]
[ext_resource type="PackedScene" uid="uid://cguhlpmuro1ta" path="res://scene/player/player.tscn" id="2_6y0hr"]
[ext_resource type="Theme" uid="uid://den0c88qxg2fn" path="res://main_theme.tres" id="2_wq6iy"]
[ext_resource type="Resource" uid="uid://b2mvptxyi4sm" path="res://characters/warrior/warrior.tres" id="3_5xu2w"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://art/8_bit_iced_village_lofi.mp3" id="3_qyclh"]
[ext_resource type="PackedScene" uid="uid://crjbff0gvk6oq" path="res://scene/card_target_selector/card_target_selector.tscn" id="3_twcql"]
[ext_resource type="Script" uid="uid://ottt3g7vqera" path="res://scene/ui/hand_ui.gd" id="3_yjev4"]
[ext_resource type="PackedScene" uid="uid://cbirgiema6dcw" path="res://scene/enemy/enemy.tscn" id="4_5xu2w"]
[ext_resource type="Script" uid="uid://cnb0dojkq4w8p" path="res://scene/battle/enemy_handler.gd" id="4_l2bdv"]
[ext_resource type="Resource" uid="uid://cfph5up86vlwc" path="res://enemies/crab/crab_enemy.tres" id="6_74lao"]
[ext_resource type="PackedScene" uid="uid://bt7nvrctc5urb" path="res://scene/ui/tooltip.tscn" id="7_74lao"]
[ext_resource type="Script" uid="uid://dljqp37xn8a81" path="res://scene/ui/battle_ui.gd" id="7_l2bdv"]
[ext_resource type="PackedScene" uid="uid://b57chtixcp8kc" path="res://scene/ui/mana_ui.tscn" id="7_yhj4q"]
[ext_resource type="Script" uid="uid://bhw6ikff4ulw8" path="res://scene/player/player_handler.gd" id="8_74lao"]
[ext_resource type="Script" uid="uid://dpq7yx70g1kik" path="res://scene/battle/red_flash.gd" id="15_rcqy1"]
[ext_resource type="PackedScene" uid="uid://bdbk3drmmpcht" path="res://scene/ui/battle_over_panel.tscn" id="17_sjq7y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6en87"]
size = Vector2(320, 120)

[node name="Battle" type="Node2D"]
script = ExtResource("1_rcqy1")
char_stats = ExtResource("3_5xu2w")
music = ExtResource("3_qyclh")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.46, 0.46, 0.46, 1)
scale = Vector2(1.25, 1.255)
texture = ExtResource("1_p7aow")
centered = false
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(160, 90)

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(160, 60)
shape = SubResource("RectangleShape2D_6en87")
debug_color = Color(0, 0.595, 0.7, 0.196078)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_l2bdv")

[node name="Enemy" parent="EnemyHandler" instance=ExtResource("4_5xu2w")]
position = Vector2(256, 103)
stats = ExtResource("6_74lao")

[node name="Player" parent="." instance=ExtResource("2_6y0hr")]
position = Vector2(75, 98)
stats = ExtResource("3_5xu2w")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_twcql")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand_ui")]
script = ExtResource("8_74lao")
hand_ui = NodePath("../BattleUI/HandUI")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_l2bdv")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("7_74lao")]
offset_top = 9.0
offset_bottom = 61.0

[node name="HandUI" type="HBoxContainer" parent="BattleUI"]
custom_minimum_size = Vector2(150, 40)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_wq6iy")
alignment = 1
script = ExtResource("3_yjev4")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("7_yhj4q")]
character_stats = ExtResource("3_5xu2w")

[node name="EndTurnButton" type="Button" parent="BattleUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -23.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_wq6iy")
text = "End Turn"

[node name="RedFlash" type="CanvasLayer" parent="."]
script = ExtResource("15_rcqy1")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.3, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_sjq7y")]

[connection signal="child_order_changed" from="EnemyHandler" to="." method="_on_enemy_handler_child_order_changed"]
